auth scope changes put base scopes in new setting Remove printerShare.Status.State due to printer issues

--- a/universal-print-dotnet/Views/Printer/Index.cshtml
+++ b/universal-print-dotnet/Views/Printer/Index.cshtml
@@ -26,7 +26,8 @@
                 <tr data-id="@printerShare.Id">
                     <td>@printerShare.Id</td>
                     <td>@printerShare.DisplayName</td>
-                    <td>@printerShare.Status.State</td>
+                    <!--<td>printerShare.Status.State</td> state not accessible to nonadmin with current rights-->
+                    <td></td>
                 </tr>
             }
         </tbody>
